--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@
 
 # ocr-web-api-project/app.py: 1
 Flask == 1.1.2
+
+# ocr-web-api-project/api_test.py: 1
+requests == 2.24.0
 Click==7.0
 gunicorn==19.9.0
 itsdangerous==1.1.0
